syntax = "proto3";
package models;

import "google/protobuf/timestamp.proto";

enum ArticleState{
	All = 0;
	PUBLISHED = 1;
	HIDDEN = 2;
}

message Article{
	int32  id = 1;
	string title = 2;
	string content = 3;
	string summary = 4;
	ArticleState state = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
	int32 cat_id = 8;
	repeated int32 tags_id = 9;
}

message Category{
	int32 id = 1;
	string name = 2;
}

message Tag{
	int32 id = 1;
	string name = 2;
}

message QueryArticle{
	repeated int32 id = 1;
	string title = 2;
	ArticleState state = 3;
	google.protobuf.Timestamp created_year = 4;
	int32 cat_id = 5;
	repeated int32 tags_id = 6;
}

message QueryCategory{
	repeated int32 id = 1;
	string name = 2;
}

message QueryTag{
	repeated int32 id = 1;
	string name = 2;
}

message DeleteArticle{
	int32 id = 1;
}

message DeleteCategory{
	int32 id = 1;
}

message DeleteTag{
	int32 id = 1;
}

message QueryRequest{
	oneof query{
		QueryArticle article = 1;
		QueryCategory category = 2;
		QueryTag tag = 3;
	}
}

message QueryResponse{
	repeated Article articles = 1;
	repeated Category categories = 2;
	repeated Tag tags = 3;
}

message CreateRequest{
	oneof create{
		Article article = 1;
		Category category = 2;
		Tag tag = 3;
	}
}

message CreateResponse{
	int32 id = 1;
}

message UpdateRequest{
	oneof update{
		Article article = 1;
		Category category = 2;
		Tag tag = 3;
	}
	int32 id = 4;
}

message UpdateResponse{
	int32 id = 1;
}

message DeleteRequest{
	oneof delete{
		DeleteArticle article = 1;
		DeleteCategory category = 2;
		DeleteTag tag = 3;
	}
}

message DeleteResponse{
	int32 id = 1;
}

service Blog{
	rpc Query(QueryRequest) returns (QueryResponse);
	rpc Create(CreateRequest) returns (CreateResponse);
	rpc Update(UpdateRequest) returns (UpdateResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
}
